Correccion a los ejemplos.

--- a/lesson2/end.html
+++ b/lesson2/end.html
@@ -33,7 +33,7 @@
                     <button type="submit" id="btn_continue" class="btn btn-primary" disabled>Continuar</button>
                 </form>
             </div>
-            <div id="" style="display: none">
+            <div id="welcome" style="display: none">
                 <h4>Bienvenido, [nombre completo]</h4>
             </div>
 
@@ -77,13 +77,3 @@
       </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
